Fix Add to Cart button hide behind bottom-navigation-header in MVMT

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
@@ -1735,6 +1735,13 @@
                 }
             }
         }
+/*
+    This .bottom class is used with prices-add-to-cart-actions to move add to cart button 
+    on top on bottom-navigation-header on PDP page
+*/ 
+        .bottom{
+            bottom:70px;
+        }
 
         .cart-and-ipay  {
             padding: 0;
